tests/snapshot/error/regexp/unicode_sets/inverted_unicode_property_of_strings.js
/[\P{Basic_Emoji}]/v;